--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -3,6 +3,8 @@
   padding: 100px 0 80px;
   text-align: center;
   color: var(--text-light);
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
 }
 
 .page-title {
@@ -29,6 +31,9 @@
   align-items: center;
   margin-bottom: 5rem;
   padding: 2rem 0;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .service-detail.reverse {
